Fix an issue with suggestions container being disconnected from the search input on mobile devices

--- a/client/style/course-selection-autocomplete.scss
+++ b/client/style/course-selection-autocomplete.scss
@@ -35,14 +35,16 @@
         }
 
         .react-autosuggest {
-            &__input {
-                flex: 1;
-            }
-
-            &__container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+            &__suggestions-container {
+                // Fix for the issue that only shows up on both mobile Chrome and Safari:
+                // for some reason, the suggestions container is exactly 2 pixels below
+                // the search input (on all desktop browsers however, it correctly shows up
+                // right below the search input)
+                // This fix is not ideal and makes the modal look a bit strange on desktop
+                // browsers (because now there is no separator between the input box and the
+                // suggestions box) but it does make it look ok on mobile. Given that modal is
+                // primarily a mobile feature, I think that this trade-off makes sense.
+                margin-top: -2px;
             }
         }
     }
@@ -103,6 +105,8 @@
     }
 
     &__suggestions-container {
+        position: relative;
+
         &--open {
             box-sizing: border-box;
             width: 100%;
@@ -134,6 +138,5 @@
         list-style-type: none;
         padding: 0;
         margin: 0;
-        text-align: left;
     }
 }
